# irc-chat

./: .gitignore  Cargo.toml  LICENSE  README.md
saved_files/: main_server_data_test.txt  secondary_server_data_test.txt  server_data.txt  server_data_sec_1.txt  server_data_sec_2.txt  users.txt  users_test.txt
src/: app_client.rs  app_server.rs  commands.rs  lib.rs  message.rs  numeric_reply.rs  parser.rs
src/client_utils/: client.glade  client.rs  connect.glade  gtk_connect.rs  gtk_login.rs  gtk_methods.rs  gtk_register.rs  login.glade  message_types.rs  register.glade  ui_updater.rs
src/custom_errors/: client_error.rs  errors.rs  mod.rs  server_error.rs
src/server_utils/: channel.rs  client_handler.rs  connection_handler.rs  connection_listener.rs  main_server.rs  mod.rs  secondary_server.rs  server.rs  server_data.rs  server_rol.rs  user.rs
src/server_utils/messages_processing_client/: admin_server.rs  connection_and_registration.rs  manage_channels.rs  messages_exchange.rs  mod.rs  user_information.rs
src/server_utils/messages_processing_server/: connection_and_registration.rs  manage_channels.rs  manage_server.rs  message_exchange.rs  mod.rs
tests/: integration_tests.rs
tests/common/: mod.rs  server_data_test.txt  users_test.txt
