[package]
name = "irc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Gtk dependency, version 0.17.0
[dependencies]
gtk = { git = "https://github.com/gtk-rs/gtk3-rs.git", branch = "0.17" }

[[bin]]
name = "server"
path = "src/app_server.rs"

[[bin]]
name = "client"
path = "src/app_client.rs"
